# lumira-be

./: .gitignore  00_get_youtube_video_ids_for_channel.py  01_download_youtube_videos.py  02_transcribe_mp3_files.py  03_increase_chunk_size_with_overlap.py  04_embed_and_upload_to_pinecone.py  05_ask_vector_and_supplment_with_ai.py  Dockerfile  app.py  ask_vector_and_supplment_with_ai.py  pyproject.toml  render.yaml  requirements.txt
youtube_pinecone/: api.py  ask_vector_and_supplment_with_ai.py  auth.py  db.py  handle_video.py
